[package]
name = "learn-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
log = "0.4.21"
vulkano = "0.34.1"
vulkano-macros = "0.34.0"
vulkano-shaders = "0.34.0"
vulkano-util = "0.34.1"
vulkano-win = "0.34.0"
winit = "0.29.15"
